--- a/index.html
+++ b/index.html
@@ -2,10 +2,26 @@
 <html lang="en">
 
   <head>
+    <meta charset="utf-8">
+    <title>Wyatt Larkey - Home</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
 
   </head>
 
   <body>
+
+    <nav class="navbar navbar-default navbar-fixed-top">
+
+
+    </nav>
+
+    <div class="jumbotron">
+      <h3>Hello World!</h3>
+    </div>
+
 
   </body>
 </html>
