Added animated navbar

--- a/index.html
+++ b/index.html
@@ -8,18 +8,46 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/nav-scroll.js"></script>
 
   </head>
 
   <body>
 
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="nav-up navbar navbar-default navbar-fixed-top">
 
 
     </nav>
 
     <div class="jumbotron">
-      <h3>Hello World!</h3>
+      <div class="welcome">
+        <h1>Hello World!</h1>
+        <h3>Wyatt Larkey's Offical Webpage</h3>
+      </div>
+    </div>
+
+    <div class="board">
+      <p>HEllo There!</p>
+      <p>HEllo There!</p>
+      <p>HEllo There!</p>
+      <p>HEllo There!</p>
+      <p>HEllo There!</p>
+      <p>HEllo There!</p>
+      <p>HEllo There!</p>
+      <p>HEllo There!</p>
+      <p>HEllo There!</p>
+      <p>HEllo There!</p>
+      <p>HEllo There!</p>
+      <p>HEllo There!</p>
+      <p>HEllo There!</p>
+      <p>HEllo There!</p>
+      <p>HEllo There!</p>
+      <p>HEllo There!</p>
+      <p>HEllo There!</p>
+      <p>HEllo There!</p>
+      <p>HEllo There!</p>
+
+
     </div>
 
 
