--- a/index.html
+++ b/index.html
@@ -15,39 +15,52 @@
   <body>
 
     <nav class="nav-up navbar navbar-default navbar-fixed-top">
+      <div class="container-fluid">
+          <div class="navbar-header">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar" style="width: 45px;">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span> 
+              </button>
+              <a class="navbar-brand" href="#">Wyatt Larkey</a>
+          </div>
+          <div class="collapse navbar-collapse" id="myNavbar">
+              <ul class="nav navbar-nav">
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="#">Info</a></li>
+                  <li><a href="#">Projects</a></li>
+                  <li><a href="#">Demos</a></li>
+              </ul>
+          </div>
+      </div>
 
 
     </nav>
 
-    <div class="jumbotron">
+    <div class="jumbotron" style="padding: 0px;">
       <div class="welcome">
         <h1>Hello World!</h1>
         <h3>Wyatt Larkey's Offical Webpage</h3>
       </div>
     </div>
 
-    <div class="board">
-      <p>HEllo There!</p>
-      <p>HEllo There!</p>
-      <p>HEllo There!</p>
-      <p>HEllo There!</p>
-      <p>HEllo There!</p>
-      <p>HEllo There!</p>
-      <p>HEllo There!</p>
-      <p>HEllo There!</p>
-      <p>HEllo There!</p>
-      <p>HEllo There!</p>
-      <p>HEllo There!</p>
-      <p>HEllo There!</p>
-      <p>HEllo There!</p>
-      <p>HEllo There!</p>
-      <p>HEllo There!</p>
-      <p>HEllo There!</p>
-      <p>HEllo There!</p>
-      <p>HEllo There!</p>
-      <p>HEllo There!</p>
+    <div class="row">
+        <p></p>
+        <div class="col-lg-3 col-md-3 hidden-sm hidden-xs">
+          <div class="jumbotron">
 
+          </div>
+        </div>
+        <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
+          <div class="jumbotron">
 
+          </div>
+        </div>
+        <div class="hidden-lg hidden-md col-sm-12 col-xs-12">
+          <div class="jumbotron">
+
+          </div>
+        </div>
     </div>
 
 
