--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar" style="width: 45px;">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
-                <span class="icon-bar"></span> 
+                <span class="icon-bar"></span>
               </button>
               <a class="navbar-brand" href="#">Wyatt Larkey</a>
           </div>
@@ -48,21 +48,26 @@
         <p></p>
         <div class="col-lg-3 col-md-3 hidden-sm hidden-xs">
           <div class="jumbotron">
-
+            <script src="js/generate_sidebar.js"></script>
           </div>
         </div>
         <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
           <div class="jumbotron">
-
+              <script src="js/generate_homepage.js"></script>
           </div>
         </div>
         <div class="hidden-lg hidden-md col-sm-12 col-xs-12">
           <div class="jumbotron">
-
+              <script src="js/generate_sidebar.js"></script>
           </div>
         </div>
     </div>
 
+    <div class="jumbotron" style="height: 10px">
+      <div class="footer">
+          <p>Copyright &copy; 2016</p>
+      </div>
+    </div>
 
   </body>
 </html>
