--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </nav>
 
     <div class="jumbotron" style="padding: 0px;">
-      <div class="welcome">
+      <div id="welcome">
         <h1>Hello World!</h1>
         <h3>Wyatt Larkey's Offical Webpage</h3>
       </div>
@@ -56,17 +56,10 @@
 
           </div>
         </div>
-        <div class="hidden-lg hidden-md col-sm-12 col-xs-12">
-          <h4>Quicklooks</h4>
-          <h5>Quick links to content</h5>
-          <div id="sidebar">
-
-          </div>
-        </div>
     </div>
 
-    <div class="jumbotron" style="height: 10px">
-      <div class="footer">
+    <div class="jumbotron">
+      <div id="footer">
           <p>Copyright &copy; 2016</p>
       </div>
     </div>
