--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
     <div class="row">
         <p></p>
+
         <div class="col-lg-3 col-md-3 hidden-sm hidden-xs">
           <h4>Quicklooks</h4>
           <h5>Quick links to content</h5>
@@ -50,18 +51,21 @@
 
           </div>
         </div>
+
         <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
           <script src="js/generate_homepage.js"></script>
           <div id="mainpage">
 
           </div>
         </div>
+
     </div>
 
-    <div class="jumbotron">
-      <div id="footer">
+    <div class="jumbotron" id="footer">
+          <h4>"Inspirational quote that makes me look smart and insightful"</h4>
+          <h5>- Wyatt Larkey</h5>
+          <br />
           <p>Copyright &copy; 2016</p>
-      </div>
     </div>
 
   </body>
