--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
               <ul class="nav navbar-nav">
                   <li><a href="index.html">Home</a></li>
                   <li><a href="about.html">Info</a></li>
-                  <li><a href="#">Projects</a></li>
-                  <li><a href="#">Demos</a></li>
+                  <li><a href="projects.html">Projects</a></li>
+                  <li><a href="demos.html">Demos</a></li>
               </ul>
           </div>
       </div>
