--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/nav-scroll.js"></script>
-    <script type="text/javascript" src="js/generate_homepage.js"></script>>
+    <script type="text/javascript" src="js/generate_homepage.js"></script>
   </head>
 
   <body onload="loadcontent()">
