--- a/about.html
+++ b/about.html
@@ -9,11 +9,10 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/nav-scroll.js"></script>
-    <script type="text/javascript" src="js/generate_homepage.js"></script>>
+    <script type="text/javascript" src="js/generate_info.js"></script>
   </head>
 
-  <!--<body onload="loadInfo()">-->
-  <body>
+  <body onload="loadInfo()">
     <nav class="nav-up navbar navbar-inverted navbar-fixed-top">
       <div class="container">
           <div class="navbar-header">
@@ -46,7 +45,7 @@
         <div class="row">
             <p></p>
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-              <script src="js/generate_homepage.js"></script>
+              <script src="js/generate_info.js"></script>
               <div id="mainpage">
 
               </div>
