--- a/projects.html
+++ b/projects.html
@@ -9,11 +9,10 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/nav-scroll.js"></script>
-    <script type="text/javascript" src="js/generate_homepage.js"></script>>
+    <script type="text/javascript" src="js/generate_projects.js"></script>
   </head>
 
-  <!--<body onload="loadInfo()">-->
-  <body>
+  <body onload="loadProj()">
     <nav class="nav-up navbar navbar-inverted navbar-fixed-top">
       <div class="container">
           <div class="navbar-header">
