--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <div class="jumbotron" style="padding: 0px;">
       <div id="welcome">
-        
+
       </div>
     </div>
 
@@ -63,10 +63,10 @@
   </div>
 
     <div class="jumbotron" id="footer">
+          <h5 style="text-align: center;"> Any Questions? Feel free to drop me an email at wlarkey@purdue.edu </h5>
+          <br />
           <h4>"Inspirational quote that makes me look smart and insightful"</h4>
           <h5>- Wyatt Larkey</h5>
-          <br />
-          <p>Copyright &copy; 2016</p>
       </div>
   </body>
 </html>
