--- a/projects.html
+++ b/projects.html
@@ -36,8 +36,7 @@
 
     <div class="jumbotron" style="padding: 0px;">
       <div id="welcome">
-        <h1>Who is Wyatt Larkey?</h1>
-        <h3>Here you can find a little about me, my resume, and links to some of my work.</h3>
+        
       </div>
     </div>
 
@@ -54,10 +53,10 @@
       </div>
 
     <div class="jumbotron" id="footer">
-          <h4>"Inspirational quote that makes me look smart and insightful"</h4>
-          <h5>- Wyatt Larkey</h5>
-          <br />
-          <p>Copyright &copy; 2016</p>
+      <h5 style="text-align: center;"> Any Questions? Feel free to drop me an email at wlarkey@purdue.edu </h5>
+      <br />
+      <h4>"Inspirational quote that makes me look smart and insightful"</h4>
+      <h5>- Wyatt Larkey</h5>
     </div>
 
   </body>
