--- a/about.html
+++ b/about.html
@@ -54,10 +54,10 @@
       </div>
 
     <div class="jumbotron" id="footer">
-          <h4>"Inspirational quote that makes me look smart and insightful"</h4>
-          <h5>- Wyatt Larkey</h5>
-          <br />
-          <p>Copyright &copy; 2016</p>
+      <h5 style="text-align: center;"> Any Questions? Feel free to drop me an email at wlarkey@purdue.edu </h5>
+      <br />
+      <h4>"Inspirational quote that makes me look smart and insightful"</h4>
+      <h5>- Wyatt Larkey</h5>
     </div>
 
   </body>
